plot bg color added

--- a/notebooks/confusion_matrix.ipynb
+++ b/notebooks/confusion_matrix.ipynb
@@ -120,6 +120,7 @@
    ],
    "source": [
     "plt.rcParams[\"figure.figsize\"] = (10, 10)\n",
+    "plt.rcParams['savefig.facecolor']='white'\n",
     "plt.rcParams[\"font.size\"] = 20\n",
     "fig, ax = plt.subplots()\n",
     "im = ax.imshow(matrix)\n",
